fix for misaligned subscribe icon

--- a/assets/css/icons.css
+++ b/assets/css/icons.css
@@ -359,9 +359,6 @@ div#message p:before {
 }
 #subscription-toggle:before {
     content: "A";
-    position: relative;
-    right: -9px;
-    top: 0;
 }
 #bbpress-forums .bbp-forums-list li a:before {
     color: #999999;
